--- a/public/labs/a3/index.css
+++ b/public/labs/a3/index.css
@@ -173,3 +173,313 @@ p#id-selector-2 {
     width: 20%;
     float: left;
 }
+.rotate-paragraph {
+    width: 250px;
+    height: 250px;
+    transform: rotate(90deg);
+}
+.rotate-list {
+    transform: rotate(12deg);
+    width: 100px;
+    background-color: red;
+    color: white;
+}
+.rotate-list-counter-clockwise {
+    transform: rotate(-12deg);
+    width: 100px;
+    background-color: green;
+    color: white;
+}
+.rotate-list-items li {
+    width: 100px;
+    text-align: right;
+}
+.rotate-list-items li:nth-child(1) {
+    transform: rotate(-10deg);
+    background-color: yellow;
+}
+.rotate-list-items li:nth-child(2) {
+    transform: rotate(2deg);
+    background-color: blue;
+    color: white;
+}
+.rotate-list-items li:nth-child(3) {
+    transform: rotate(10deg);
+    background-color: red;
+}
+.rotate-image {
+    transform: rotate(-10deg);
+}
+.rotate-image-10deg-clockwise {
+    transform: rotate(10deg);
+}
+.rotate-table {
+    position: relative;
+    left: 50px;
+    transform: rotate(15deg);
+}
+.rotate-table tr:nth-child(1) {
+    background-color: black;
+    color: white;
+}
+.rotate-table tr:nth-child(n+2) {
+    background-color: yellow;
+}
+.rotate-table tr:nth-child(n+5) {
+    background-color: blue;
+    color: white;
+}
+.rotate-table tr:nth-child(n+8) {
+    background-color: red;
+}
+.rotate-table tr:nth-child(n+11) {
+    background-color: green;
+    color: white;
+}
+.gradients-linear {
+    background: linear-gradient(yellow, red);
+    width: 200px;
+    height: 200px;
+}
+.gradients-linear-blue-orange {
+    background: linear-gradient(blue, orange);
+    width: 100px;
+    height: 100px;
+}
+.gradients-radial {
+    background: radial-gradient(yellow, green);
+    width: 200px;
+    height: 200px;
+}
+.gradients-radial-pink-deeppink {
+    background: radial-gradient(pink, deeppink);
+    width: 100px;
+    height: 100px;
+}
+.gradients-positioned {
+    background:
+            radial-gradient(
+                    at top left, blue, red);
+    width: 200px;
+    height: 200px;
+    color: white;
+}
+.gradients-positioned-br-lime-dodgerblue {
+    background:
+            radial-gradient(at bottom right, lime, dodgerblue);
+    width: 200px;
+    height: 200px;
+    color: white;
+}
+.animation-keyframes {
+    position: relative;
+    top: 0px;
+    animation-duration: 7s;
+    animation-name: slidein;
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    color: white;
+}
+@keyframes slidein {
+    from {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 100%;
+        width: 200px;
+        height: 200px;
+        background-color: yellow;
+        color: black;
+    }
+    50% {
+        position: relative;
+        top: -200px;
+        font-size: 300%;
+        margin-left: 25%;
+        width: 400px;
+        height: 400px;
+        background-color: blue;
+        color: white;
+    }
+    to {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 0%;
+        width: 200px;
+        height: 200px;
+        background-color: red;
+        color: white;
+    }
+}
+.animation-keyframes-mine {
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-duration: 10s;
+    animation-name: backnforth;
+    margin-left: 10%;
+    width: 100px;
+    height: 100px;
+    background-color: indigo;
+    color: plum;
+}
+@keyframes backnforth {
+    from {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 80%;
+        width: 100px;
+        height: 100px;
+        background-color: plum;
+        color: indigo;
+    }
+    60% {
+        position: relative;
+        top: -100px;
+        font-size: 150%;
+        width: 200px;
+        height: 100px;
+        background-color: black;
+        color: white;
+    }
+    to {
+        position: relative;
+        top: 0px;
+        font-size: 100%;
+        margin-left: 10%;
+        width: 100px;
+        height: 100px;
+        background-color: indigo;
+        color: plum;
+    }
+}
+.flex-container {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+}
+.flex-container-justify-center {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+    justify-content: center;
+}
+.flex-container-justify-end {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+    justify-content: end;
+}
+.flex-container-justify-space-around {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+    justify-content: space-around;
+}
+.flex-container-justify-space-between {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+    justify-content: space-between;
+}
+.flex-container-align-flex-start {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+.flex-container-align-center {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.flex-container-stretch {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    display: flex;
+}
+.flex-container-stretch > .flex-box {
+    flex-basis: 100%;
+}
+.flex-box {
+    border: 5px gray solid;
+    margin: 10px;
+    padding: 10px;
+}
+.flex-box-1 {
+    background-color: yellow;
+}
+.flex-box-2 {
+    background-color: blue;
+    color: white;
+}
+.flex-box-3 {
+    background-color: red;
+    color: white;
+}
+@media (min-width: 0px) and (max-width: 600px) {
+    h2 {
+        background-color: darkorange;
+        color: midnightblue;
+    }
+    h3 {
+        background-color: orange;
+        color: blue;
+    }
+    p {
+        background-color: purple;
+        color: lemonchiffon;
+        font-weight: bolder;
+    }
+    div {
+        background-color: midnightblue;
+        color: #61dafb;
+    }
+    .media-query {
+        background-color: palegreen;
+        color: lightsalmon;
+    }
+}
+@media (min-width: 600px) and (max-width: 1200px) {
+    h2 {
+        background-color: dodgerblue;
+    }
+    h3 {
+        background-color: deepskyblue;
+    }
+    h4 {
+        background-color: skyblue;
+    }
+    body {
+        background-color: lightblue;
+        color: indigo;
+    }
+    .media-query {
+        background-color: green;
+        color: salmon;
+    }
+}
+@media (min-width: 1200px)
+and (max-width: 1800px) {
+    body {
+        background-color: palegoldenrod;
+    }
+    .media-query {
+        background-color: darkgreen;
+        color: darkorange;
+    }
+}
+
