--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,3 +1,10 @@
+.wd-explore-avatar {
+    position: relative;
+    border-radius: 50%;
+    height: 13px;
+    width: 13px;
+    overflow: hidden;
+}
 .wd-explore-image {
     border-radius: 10px;
     width: 100px;
