--- a/public/labs/a4/index.css
+++ b/public/labs/a4/index.css
@@ -1,9 +1,12 @@
 .btn-primary.override-bs {
     background-color: #a90dfd;
-    border-color: #fd0d51;
+    border-color: red;
     border-width: 10px;
     border-radius: 20px;
     border-style: dashed;
     font-size: 2em;
     font-weight: bolder;
+}
+.text-primary.override-bs {
+    color:green;
 }
