--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -90,6 +90,14 @@
 .nav-link.override-bs {
     color:gray;
 }
+.nav-link.active.override-bs {
+    border-width:0px;
+    border-bottom-width:5px;
+    border-color: #1d9af0;
+    border-radius:5px;
+    font-weight:bold;
+    color:black;
+}
 #nav-pane .list-group-item {
     border-width:0;
     font-weight:lighter;
