--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,141 +1,22 @@
-.wd-explore-avatar {
-    position: relative;
-    border-radius: 50%;
-    height: 40px;
-    width: 40px;
-    overflow: hidden;
+.wd-fa-half {
+    font-size:0.5em;
 }
-.wd-explore-image {
-    border-radius: 10px;
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
+.wd-fg-color-cyborg-list-bg {
+    color: #222222;
 }
-.wd-width-50px {
-    width: 50px;
+.wd-width-60px {
+    width: 60px;
 }
 .wd-width-85px {
     width: 85px;
 }
-.wd-width-120px {
-    width: 120px;
-}
-.wd-text-decoration-none {
-    text-decoration: none;
-}
-.wd-fa-half {
-    font-size:0.5em;
+.wd-explore-avatar {
+    border-radius: 50%;
+    max-height: 40px;
+    max-width: 40px;
+    overflow: hidden;
 }
 .wd-pill {
     border-radius: 30px;
     width: 100%;
-}
-.wd-searchbar {
-    border-radius: 30px;
-    width: 100%;
-}
-.wd-font-30px {
-    font-size: 30px;
-}
-.wd-pos-abs {
-    position: absolute;
-}
-.wd-pos-rel {
-    position: relative;
-}
-.wd-left-30px {
-    left:30px;
-}
-.wd-flex-container-align-center {
-    display: flex;
-    align-items: center;
-}
-.wd-search-icon {
-    position: absolute;
-    left:30px;
-    top: 25%;
-    color: gray;
-}
-.wd-width-100pc {
-    width:100%;
-}
-.wd-bottom-left {
-    bottom:0;
-    left:12px;
-}
-.wd-padding-left-0px {
-    padding-left:0px;
-}
-.wd-padding-top-bottom-6px {
-    padding-top:6px;
-    padding-bottom:6px;
-}
-.wd-padding-bottom-8px {
-    padding-bottom:8px;
-}
-.wd-padding-top-8px {
-    padding-top:8px;
-}
-.btn-primary.override-bs {
-    background-color: #1d9af0;
-    border-color: #1d9af0;
-}
-.text-primary.override-bs {
-    color:red;
-}
-.form-control.override-bs {
-    background-color: #eff3f4;
-    border-color: #eff3f4;
-}
-.nav-link.override-bs {
-    color:gray;
-}
-.nav-link.active.override-bs {
-    border-width:0px;
-    border-bottom-width:5px;
-    border-color: #1d9af0;
-    border-radius:5px;
-    font-weight:bold;
-    color:black;
-}
-#nav-pane .list-group-item {
-    border-width:0;
-    font-weight:lighter;
-}
-#nav-pane .list-group-item.active {
-    background-color:#f7f9f8;
-    color:black;
-    font-weight:bolder;
-}
-#nav-pane .text-primary.override-bs {
-    color:#1d9af0;
-}
-#nav-pane .text-primary.override-bs {
-    color:#1d9af0;
-}
-#main-content .list-group-item {
-    border-width:0;
-}
-.list-group.override-bs {
-    border-radius:20px;
-}
-#who-to-follow .list-group-item.override-bs-gray {
-    border-width:0;
-    background-color:#f7f9f8;
-}
-#who-to-follow .btn-primary.override-bs {
-    background-color:black;
-    border-color: black;
-}
-wd-height-264px {
-    height: 264px;
-}
-wd-bg-who-to-follow {
-    background-color:#f7f9f8;
-}
-wd-fg-color-blue {
-    color:#1d9af0;
-}
-wd-border-color-blue {
-    border-color: #1d9af0;
 }
