--- a/public/tuiter/styles.css
+++ b/public/tuiter/styles.css
@@ -204,6 +204,9 @@ body {
 .wd-max-width-504px {
     width: 504px;
 }
+.wd-max-width-px {
+    max-width:120px;
+}
 .wd-tuit-image-fill {
     max-width: 100%;
     height: auto;
